--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,14 @@ django-crispy-forms==2.3
 django-filter==24.3
 django-imagekit==5.0.0
 djangorestframework==3.15.2
+djangorestframework-simplejwt==5.3.1
 drf-yasg==1.21.7
 inflection==0.5.1
 packaging==24.1
 pilkit==3.0
 pillow==10.4.0
+PyJWT==2.9.0
+python-dotenv==1.0.1
 pytz==2024.2
 PyYAML==6.0.2
 sqlparse==0.5.1
