--- a/requirements.txt
+++ b/requirements.txt
@@ -2,9 +2,11 @@ asgiref==3.8.1
 attrs==24.2.0
 autobahn==24.4.2
 Automat==24.8.1
+certifi==2024.8.30
 cffi==1.17.1
 channels==4.1.0
 channels-redis==4.2.0
+charset-normalizer==3.3.2
 constantly==23.10.4
 cryptography==43.0.1
 daphne==4.1.2
@@ -16,7 +18,7 @@ django-crispy-forms==2.3
 django-filter==24.3
 django-imagekit==5.0.0
 djangorestframework==3.15.2
-djangorestframework-simplejwt==5.1.0
+djangorestframework-simplejwt==5.3.1
 drf-yasg==1.21.7
 hyperlink==21.0.0
 idna==3.10
@@ -36,6 +38,7 @@ python-dotenv==1.0.1
 pytz==2024.2
 PyYAML==6.0.2
 redis==5.0.8
+requests==2.32.3
 service-identity==24.1.0
 setuptools==75.1.0
 sqlparse==0.5.1
@@ -44,4 +47,5 @@ txaio==23.1.1
 typing_extensions==4.12.2
 tzdata==2024.1
 uritemplate==4.1.1
+urllib3==2.2.3
 zope.interface==7.0.3
