--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ django-cors-headers==4.4.0
 django-crispy-forms==2.3
 django-filter==24.3
 django-imagekit==5.0.0
+django-taggit==6.0.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 drf-yasg==1.21.7
