--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ charset-normalizer==3.3.2
 constantly==23.10.4
 cryptography==43.0.1
 daphne==4.1.2
+dj-rest-auth==6.0.0
 Django==5.1.1
 django-allauth==65.0.0
 django-appconf==1.0.6
