--- a/.gitignore
+++ b/.gitignore
@@ -173,5 +173,4 @@ cython_debug/
 
 # End of https://www.toptal.com/developers/gitignore/api/django
 
-**/migrations/*.py
-!**/migrations/__init__.py
+migrations/
