--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ django-taggit==6.0.0
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 drf-spectacular==0.27.2
+drf-spectacular-sidecar==2024.7.1
 hyperlink==21.0.0
 idna==3.10
 incremental==24.7.2
