--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,8 @@ django-crispy-forms==2.3
 django-filter==24.3
 django-imagekit==5.0.0
 django-storages==1.14.4
-django-taggit==6.0.0
+django-taggit==6.1.0
+django-taggit-serializer==0.1.7
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 drf-spectacular==0.27.2
