--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -14,9 +14,6 @@ jobs:
       matrix:
         python-version: [3.12]
 
-    container:
-      image: python:3.12-slim
-
     services:
       db:
         image: postgres:13
@@ -66,6 +63,11 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v3
+      with:
+        python-version: ${{ matrix.python-version }}
+
+    - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
